// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptureCycle.js should render when there are both insideViewportComponents and outsideViewportComponents 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    Capture Cycle
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
        </div>
      }
    />
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render when there are only insideViewportComponents 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    Capture Cycle
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
        </div>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render when there are only outsideViewportComponents 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    Capture Cycle
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render with a routeUrl 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    routeUrl
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
        </div>
      }
    />
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render with a timestamp 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    Capture Cycle
    <span>
       at 
      timestamp
      :
    </span>
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
        </div>
      }
    />
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render with a viewportLoadTime 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    Capture Cycle
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
          <h4
            className="capture-cycle--viewport-load-time"
          >
            Viewport Load Time: 
            <span
              className="capture-cycle--statistic"
            >
              15.4
            </span>
            ms
          </h4>
        </div>
      }
    />
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;

exports[`CaptureCycle.js should render with both a routeUrl and timestamp 1`] = `
<section>
  <h2
    className="capture-cycle--header"
  >
    routeUrl
    <span>
       at 
      timestamp
      :
    </span>
  </h2>
  <div
    className="capture-cycle--card"
  >
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <div
          className="capture-cycle--inside-viewport-header"
        >
          <h3
            className="capture-cycle--card-header"
          >
            <span
              className="mobile-hidden"
            >
              Components 
            </span>
            Inside Viewport
          </h3>
        </div>
      }
    />
    <CaptureCycleSection
      components={
        Array [
          Object {
            "componentLoadTime": 12.2,
            "componentName": "componentName",
          },
        ]
      }
      heading={
        <h3
          className="capture-cycle--card-header"
        >
          <span
            className="mobile-hidden"
          >
            Components 
          </span>
          Outside Viewport
        </h3>
      }
    />
  </div>
</section>
`;
